# MAS-Course-Project-Tasks

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py  script.py.mako
prj_20260504_191126_book_management_system/: README.md  alembic.ini  pyproject.toml
prj_20260504_191126_book_management_system/alembic/: README_fix_notes.txt  env.py
prj_20260504_191126_book_management_system/app/: db.py  main.py  setup.py
prj_20260504_191126_book_management_system/app/models/: book.py  room.py  shelf.py
prj_20260504_191126_book_management_system/app/routers/: books.py  rooms.py  shelves.py
prj_20260504_191126_book_management_system/app/schemas/: book.py  room.py  shelf.py
prj_20260504_191126_book_management_system/app/services/: books.py  rooms.py  shelves.py
prj_20260504_191126_book_management_system/data/: app.db
prj_20260504_191126_book_management_system/tests/: conftest.py  test_api.py  test_api_crud_and_location.py  test_book_management_schema.py  test_delete_behavior.py  test_fk_enforcement.py  test_schema.py
prj_20260504_205158_book_management_system/: README.md  alembic.ini  pyproject.toml
prj_20260504_205158_book_management_system/alembic/: env.py  script.py.mako
prj_20260504_205158_book_management_system/alembic/versions/: 001_initial_schema.py
prj_20260504_205158_book_management_system/app/: auth.py  crud_ui.py  db.py  main.py  setup.py
prj_20260504_205158_book_management_system/app/models/: book.py  room.py  shelf.py
prj_20260504_205158_book_management_system/tests/: conftest.py  test_books.py  test_rooms.py  test_shelves.py
(+139 files in other folders)
