[project]
name = "prj-20260504-191126-book-management-system"
version = "0.1.0"

dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pydantic>=2.6",
  "jinja2>=3.1",
  "httpx>=0.26",
  "pytest>=8.0",
  "ruff>=0.5",
  "starlette>=0.37",
  "greenlet>=3.0",
  "python-multipart>=0.0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
