[project]
name = "prj-20260504-205158-book-management-system"
version = "0.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["F", "E", "W"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.dependencies]
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
python-jose = "^3.3.0"
Jinja2 = "^3.1.4"
starlette = "^0.38.0"
htmx = "^0.0.0"
pydantic = "^2.7.0"
httpx = ">=0.27"
pytest = ">=8"
